src/objects/dupcheck__dcGroup__c.object
<CustomObject>
    <fields>
        <fullName>dupcheck__Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__ErrorCount__c</fullName>
        <label>Error Count</label>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__HasError__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__Display__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>dupcheck__dc3Duplicate__c.dupcheck__dcGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dupcheck__MasterRecord__c</fullName>
        <label>Master Record</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__avgScore__c</fullName>
        <formula>IF(dupcheck__duplicateCount__c = 0,0,dupcheck__sumScore__c /  dupcheck__duplicateCount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__dcJob__c</fullName>
        <label>Duplicate Check Job</label>
        <referenceTo>dupcheck__dcJob__c</referenceTo>
        <relationshipLabel>Duplicate Check Groups</relationshipLabel>
        <relationshipName>Duplicate_Check_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dupcheck__duplicateCount__c</fullName>
        <label>Duplicate Count</label>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__Display__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>dupcheck__dc3Duplicate__c.dupcheck__dcGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dupcheck__empty__c</fullName>
        <formula>dupcheck__duplicateCount__c = 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Empty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__group__c</fullName>
        <label>Group</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__handled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Handled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__highScore__c</fullName>
        <label>High Score</label>
        <summarizedField>dupcheck__dc3Duplicate__c.dupcheck__Score__c</summarizedField>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__Display__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>dupcheck__dc3Duplicate__c.dupcheck__dcGroup__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dupcheck__lowScore__c</fullName>
        <label>Lowest Score</label>
        <summarizedField>dupcheck__dc3Duplicate__c.dupcheck__Score__c</summarizedField>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__Display__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>dupcheck__dc3Duplicate__c.dupcheck__dcGroup__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dupcheck__mergeData__c</fullName>
        <label>Merge Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__recordCount__c</fullName>
        <label>Record Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__sumScore__c</fullName>
        <label>Sum Score</label>
        <summarizedField>dupcheck__dc3Duplicate__c.dupcheck__Score__c</summarizedField>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__handled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>dupcheck__dc3Duplicate__c.dupcheck__Display__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>dupcheck__dc3Duplicate__c.dupcheck__dcGroup__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Duplicate Check Group</label>
    <nameField>
        <displayFormat>GRP{000000}</displayFormat>
        <label>Duplicate Check Group</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Check Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>